internalservices/cluster/policies/psp-allowedusers-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: psp-pods-allowed-user-ranges
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot #MustRunAs #RunAsAny 
    supplementalGroups:
      rule: RunAsAny # MayRunAs #RunAsAny
