internalservices/cluster/policies/psp-readonlyroot-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPReadOnlyRootFilesystem
metadata:
  name: psp-readonlyrootfilesystem
  annotations:
    configmanagement.gke.io/namespace-selector: selector-restricted-true
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
