internalservices/cluster/policies/psp-volumes-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPVolumeTypes
metadata:
  name: psp-volume-types
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    volumes:
    - emptyDir
    - secret
    - persistentVolumeClaim
    - nfs
    - downwardAPI
    - configMap
    - projected
